--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # MacOS
 .DS_Store
-Icon\r\r
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -106,4 +105,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-Icon[]
+Icon[
+]
